# Nihilo

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/: CMakeLists.txt  assets.h  create_resources.cmake
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt  glad.c  glad.h
lib/khr/: CMakeLists.txt
src/: CMakeLists.txt  animator.cpp  animator.hpp  box.hpp  file_util.cpp  file_util.hpp  loop.cpp  loop.hpp  main.cpp  manager.cpp  manager.hpp  timing.cpp  timing.hpp
src/animation/: animator.cpp  animator.hpp  camera.cpp  controller.cpp  controller.hpp  font.cpp  font.hpp  rectangle.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  vertex.cpp  vertex.hpp  window.cpp  window.hpp
src/control/: camera.cpp  camera.hpp  control.hpp  controller.cpp  controller.hpp  window.cpp  window.hpp
src/render/: font.cpp  rectangle.cpp  renderer.cpp  renderer.hpp  shader.hpp
src/shaders/: main.vert
src/simulation/: force.cpp  force.hpp  integration.cpp  integration.hpp  motion.cpp  motion.hpp  preset.hpp  simulation.hpp  simulator.cpp  simulator.hpp
